<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity"
    android:background="@color/green"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:elevation="10dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_img"
                android:src="@drawable/logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_page"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginHorizontal="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_email"
                        android:id="@+id/loginEmailAdd"
                        android:drawablePadding="20dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textColorHint="@color/black"
                        android:drawableStart="@drawable/ic_mail"
                        android:inputType="textEmailAddress">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:id="@+id/loginPassword"
                        android:inputType="textPassword"
                        android:drawablePadding="20dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textColorHint="@color/black"
                        android:drawableStart="@drawable/ic_lock"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgotPassword"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginBtn"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:background="@drawable/btn_background"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/newRegisterBtn"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>
