<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreenActivity"
    android:orientation="vertical"
    android:background="@color/green"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:elevation="10dp"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:importantForAccessibility="no"
                android:src="@drawable/logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_page"
                android:textSize="25sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_continue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:gravity="center"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="#000"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_full_name"
                        android:id="@+id/userName"
                        android:drawablePadding="20dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_person">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="#000"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_email"
                        android:id="@+id/signupEmailAdd"
                        android:drawablePadding="20dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_mail">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="#000"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:id="@+id/signupPassword"
                        android:inputType="textPassword"
                        android:drawablePadding="20dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_lock">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupBtn"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/btn_background"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registeredOldBtn"
                    android:text="@string/already_registered_sign_in"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>