<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:backgroundTint="@color/green"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:id="@+id/idLL1">

            <TextView
                android:id="@+id/idTVItemName"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:padding="4dp"
                android:text="@string/item_name"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <!-- Centered LinearLayout for quantity control -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Minus Button -->
                <ImageButton
                    android:id="@+id/minusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/idTVQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:text="@string/quantity"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <!-- Plus Button -->
                <ImageButton
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>

            <TextView
                android:id="@+id/idTVRate"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1.5"
                android:padding="4dp"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/idIVDelete"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                app:tint="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_margin="3dp"
            android:layout_below="@+id/idLL1"
            android:layout_toLeftOf="@id/idTVTotalAmt"
            android:text="@string/total_cost"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTVTotalAmt"
            android:text="Tmt"
            android:padding="4dp"
            android:layout_margin="3dp"
            android:layout_below="@+id/idLL1"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
